io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/throwsexceptionsonnonpublic1/C.java
package io.hotmoka.examples.errors.throwsexceptionsonnonpublic1;

import io.takamaka.code.lang.Contract;
import io.takamaka.code.lang.ThrowsExceptions;

public class C extends Contract {
	@ThrowsExceptions void m() {}
}